--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "author": "Michael Arnaldi <arnaldimichael@gmail.com>",
   "license": "MIT",
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    },
     "./*": {
       "import": "./dist/esm/*.js",
       "require": "./dist/cjs/*.js"
@@ -41,7 +37,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-codegen": "^0.16.1",
+    "eslint-plugin-codegen": "0.16.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -51,5 +47,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch"
   }
 }
