--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "release": "changeset publish",
     "build": "yarn build:clean && yarn build:esm && yarn build:cjs",
     "build:esm": "tsc -b tsconfig.json",
-    "build:cjs": "swc ./dist/esm -d ./dist/cjs",
+    "build:cjs": "cd dist && swc ./esm -d ./cjs",
     "build:clean": "rimraf dist",
-    "postinstall": "tsplus-install"
+    "postinstall": "tsplus-install",
+    "swc": "swc"
   },
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
