chore: fix package configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
     "**/.swc": true,
     "**/.changeset": true,
     "**/yarn.lock": true,
-    "**/tsconfig.json": true,
+    //"**/tsconfig.json": true,
     "**/.*rc": true,
     "**/.*config": true,
     "**/.git*": true,
