--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         "declarationDir": "dist/dts",
         "incremental": true,
         "tsBuildInfoFile": "dist/.tsbuildinfo",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "tsPlusModuleDiscoveryLocalSuffix": "js",
+        "tsPlusTracingPackageName": "@tsplus/stdlib"
     },
     "include": [
         "src/**/*.ts"
