chore: update build setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,19 +17,19 @@
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "files.exclude": {
-    "**/.yarn*": true,
-    "**/.*.js": true,
-    "**/.swc": true,
-    "**/.changeset": true,
-    "**/yarn.lock": true,
-    "**/.*rc": true,
-    "**/.*config": true,
-    "**/.git*": true,
-    "**/.npmignore*": true,
-    "**/.husky": true,
-    "**/LICENSE.*": true,
-    "**/lerna.json": true,
-    "**/jest.config.js": true,
+    //"**/.yarn*": true,
+    //"**/.*.js": true,
+    //"**/.swc": true,
+    //"**/.changeset": true,
+    //"**/yarn.lock": true,
+    //"**/.*rc": true,
+    //"**/.*config": true,
+    //"**/.git*": true,
+    //"**/.npmignore*": true,
+    //"**/.husky": true,
+    //"**/LICENSE.*": true,
+    //"**/lerna.json": true,
+    //"**/jest.config.js": true,
   },
   "prettier.disableLanguages": [
     "javascript",
