--- a/package.json
+++ b/package.json
@@ -1,65 +1,70 @@
 {
-  "name": "@tsplus/stdlib",
-  "version": "0.0.0",
-  "repository": "https://github.com/ts-plus/installer.git",
+  "name": "tsplus",
+  "private": true,
+  "repository": "https://github.com/ts-plus/stdlib.git",
   "author": "Michael Arnaldi <arnaldimichael@gmail.com>",
   "license": "MIT",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./build/dts/*"
-      ]
-    }
-  },
-  "exports": {
-    "./*": {
-      "require": "./build/cjs/*.js",
-      "import": "./build/esm/*.js"
-    }
-  },
-  "ets": {
-    "typeDir": "./build/dts"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "changeset": "changeset",
     "release": "changeset publish",
-    "build": "yarn build:clean && yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc -b tsconfig.json",
-    "build:cjs": "cp .swcrc dist && cd dist && swc ./esm -d ./cjs",
-    "build:clean": "rimraf dist",
     "postinstall": "tsplus-install",
-    "swc": "swc"
+    "clean": "ultra -r clean",
+    "build": "ultra -r build",
+    "circular": "ultra -r circular",
+    "test": "jest --detectOpenHandles",
+    "autofix": "ultra -r autofix",
+    "lint": "ultra -r lint",
+    "tc": "ultra -r tc",
+    "org:rimraf": "cd $INIT_CWD && rimraf",
+    "org:tsc": "cd $INIT_CWD && tsc",
+    "org:eslint": "cd $INIT_CWD && eslint",
+    "org:prettier": "cd $INIT_CWD && prettier",
+    "org:concurrently": "cd $INIT_CWD && concurrently",
+    "org:build-utils": "cd $INIT_CWD && build-utils",
+    "org:ts-node": "cd $INIT_CWD && ts-node",
+    "org:babel": "cd $INIT_CWD && babel",
+    "org:madge": "cd $INIT_CWD && madge"
   },
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.2",
-    "@changesets/cli": "^2.20.0",
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.137",
-    "@tsplus/installer": "^0.0.21",
-    "@types/node": "^17.0.13",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "@changesets/changelog-github": "^0.4.3",
+    "@changesets/cli": "^2.21.0",
+    "@effect-ts/build-utils": "^0.38.2",
+    "@effect-ts/core": "^0.58.0",
+    "@tsplus/installer": "^0.0.31",
+    "@types/node": "^17.0.21",
     "@types/rimraf": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "ci-info": "^3.3.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "babel-plugin-replace-import-extension": "^1.1.2",
+    "chalk": "4.1.2",
+    "concurrently": "^7.0.0",
+    "cpx": "^1.5.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-codegen": "0.16.1",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.6.2",
+    "ultra-runner": "^3.10.5"
   },
   "resolutions": {
-    "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch"
+    "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
+    "@effect-ts/build-utils@0.38.2": "patch:@effect-ts/build-utils@npm:0.38.2#.yarn/patches/@effect-ts-build-utils-npm-0.38.2-6704bdca8a"
   }
 }
