--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
-    "@effect-ts/build-utils": "^0.38.2",
+    "@effect-ts/build-utils": "0.38.2",
     "@effect-ts/core": "^0.58.0",
     "@tsplus/installer": "^0.0.31",
     "@types/node": "^17.0.21",
@@ -65,6 +65,6 @@
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
-    "@effect-ts/build-utils@0.38.2": "patch:@effect-ts/build-utils@npm:0.38.2#.yarn/patches/@effect-ts-build-utils-npm-0.38.2-6704bdca8a"
+    "@effect-ts/build-utils@0.38.2": "patch:@effect-ts/build-utils@0.38.2#.yarn/patches/effect-ts-build-utils.patch"
   }
 }
