chore: improve list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,6 @@
   "editor.parameterHints.enabled": true,
   "files.watcherExclude": {
     "**/target": true
-  }
+  },
+  "files.insertFinalNewline": true
 }
