--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "postinstall": "tsplus-install",
     "clean": "ultra -r clean",
     "build": "ultra -r build",
+    "watch": "tsc -b tsconfig.watch.json --watch",
     "circular": "ultra -r circular",
-    "test": "jest --detectOpenHandles",
+    "test": "TS_JEST_DISABLE_VER_CHECKER=true jest --detectOpenHandles",
     "autofix": "ultra -r autofix",
     "lint": "ultra -r lint",
     "tc": "ultra -r tc",
@@ -38,6 +39,7 @@
     "@effect-ts/build-utils": "0.38.3",
     "@effect-ts/core": "^0.58.1",
     "@tsplus/installer": "^0.0.36",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -56,9 +58,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "jest": "^27.5.1",
     "madge": "^5.0.1",
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "ultra-runner": "^3.10.5"
