--- a/packages/stdlib/tsconfig.build.json
+++ b/packages/stdlib/tsconfig.build.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "build/esm",
         "declarationDir": "build/dts",
-        "target": "ES2018",
+        "target": "ES2021",
         "module": "ES6",
         "moduleResolution": "Node",
         "incremental": true,
@@ -12,7 +12,7 @@
         "declarationMap": true,
         "removeComments": false,
         "tsPlusModuleDiscoveryLocalSuffix": "js",
-        "tsPlusTracingPackageName": "@tsplus/stdlib"
+        "tsPlusTracingPackageName": "@tsplus/stdlib",
     },
     "include": [
         "src/**/*.ts"
