--- a/packages/stdlib/package.json
+++ b/packages/stdlib/package.json
@@ -12,9 +12,8 @@
     "clean": "yarn org:rimraf build tsbuildinfo dist",
     "build-cjs": "yarn org:babel build/esm --config-file ./.babel.cjs.json --out-dir build/cjs --out-file-extension .js --source-maps",
     "build-mjs": "yarn org:babel build/esm --config-file ./.babel.mjs.json --out-dir build/mjs --out-file-extension .mjs --source-maps",
-    "build-ts": "yarn org:tsc -p tsconfig.build.json",
     "build-post": "yarn org:build-utils pack",
-    "build": "yarn build-ts && yarn org:concurrently \"yarn build-cjs\" \"yarn build-mjs\" && yarn build-post",
+    "build-pack": "yarn org:concurrently \"yarn build-cjs\" \"yarn build-mjs\" && yarn build-post",
     "lint": "yarn org:eslint . --ext .ts,.tsx",
     "autofix": "yarn lint --fix && yarn prettier",
     "prettier": "yarn org:prettier --write \"./{src,test,demo}/**/*.ts\"",
@@ -26,6 +25,6 @@
     "modules": []
   },
   "tsplus": {
-    "typeDir": "./"
+    "typeDir": "./build/dts"
   }
 }
