--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "release": "changeset publish",
     "postinstall": "tsplus-install",
     "clean": "ultra -r clean",
-    "build": "ultra -r build",
-    "watch": "tsc -b tsconfig.watch.json --watch",
+    "build": "yarn build-all && yarn build-pack",
+    "build-pack": "ultra -r build-pack",
+    "build-all": "tsc -b tsconfig.all.json",
+    "build-watch": "tsc -b tsconfig.all.json --watch",
     "circular": "ultra -r circular",
-    "test": "TS_JEST_DISABLE_VER_CHECKER=true jest --detectOpenHandles",
+    "test": "vitest",
     "autofix": "ultra -r autofix",
     "lint": "ultra -r lint",
     "tc": "ultra -r tc",
@@ -39,7 +41,6 @@
     "@effect-ts/build-utils": "0.38.3",
     "@effect-ts/core": "^0.58.1",
     "@tsplus/installer": "^0.0.37",
-    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -58,17 +59,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "jest": "^27.5.1",
     "madge": "^5.0.1",
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
-    "ultra-runner": "^3.10.5"
+    "ultra-runner": "^3.10.5",
+    "vite": "^2.7.13",
+    "vitest": "https://github.com/mikearnaldi/vitest/raw/f0fd85f779aaefabfcd5a1309bf558e21c9d09f0/packages/vitest/dev/vitest-0.7.6.tgz"
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
-    "@effect-ts/build-utils@0.38.2": "patch:@effect-ts/build-utils@0.38.2#.yarn/patches/effect-ts-build-utils.patch"
+    "@effect-ts/build-utils@0.38.3": "patch:@effect-ts/build-utils@0.38.3#.yarn/patches/effect-ts-build-utils.patch"
   }
 }
