chore: fix re-export

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.preferences.importModuleSpecifier": "non-relative",
   "editor.formatOnSave": true,
   "eslint.format.enable": true,
   "explorer.sortOrder": "mixed",
