--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "scripts": {
     "changeset": "changeset",
     "release": "changeset publish",
-    "postinstall": "tsplus-install",
     "clean": "ultra -r clean",
     "build": "yarn build-all && yarn build-pack",
     "build-pack": "ultra -r build-pack",
@@ -40,7 +39,6 @@
     "@changesets/cli": "^2.21.1",
     "@effect-ts/build-utils": "0.38.3",
     "@effect-ts/core": "^0.58.1",
-    "@tsplus/installer": "^0.0.45",
     "@types/node": "^17.0.21",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -63,6 +61,7 @@
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.0",
     "typescript": "^4.6.2",
     "ultra-runner": "^3.10.5",
     "vite": "^2.8.6",
@@ -71,6 +70,7 @@
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
     "@effect-ts/build-utils@0.38.3": "patch:@effect-ts/build-utils@0.38.3#.yarn/patches/effect-ts-build-utils.patch",
-    "vitest": "https://github.com/mikearnaldi/vitest/raw/f0fd85f779aaefabfcd5a1309bf558e21c9d09f0/packages/vitest/dev/vitest-0.7.6.tgz"
+    "vitest": "https://github.com/mikearnaldi/vitest/raw/f0fd85f779aaefabfcd5a1309bf558e21c9d09f0/packages/vitest/dev/vitest-0.7.6.tgz",
+    "typescript": "./typescript-4.7.0-tsplus.20220321.2.tgz"
   }
 }
