--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autofix": "ultra -r autofix",
     "lint": "ultra -r lint",
     "tc": "ultra -r tc",
+    "postinstall": "tsplus-install",
     "org:rimraf": "cd $INIT_CWD && rimraf",
     "org:tsc": "cd $INIT_CWD && tsc",
     "org:eslint": "cd $INIT_CWD && eslint",
@@ -39,6 +40,7 @@
     "@changesets/cli": "^2.21.1",
     "@effect-ts/build-utils": "0.38.3",
     "@effect-ts/core": "^0.58.1",
+    "@tsplus/installer": "^0.0.46",
     "@types/node": "^17.0.21",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -61,16 +63,13 @@
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.0",
     "typescript": "^4.6.2",
     "ultra-runner": "^3.10.5",
     "vite": "^2.8.6",
-    "vitest": "0.7.6"
+    "vitest": "0.7.7"
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
-    "@effect-ts/build-utils@0.38.3": "patch:@effect-ts/build-utils@0.38.3#.yarn/patches/effect-ts-build-utils.patch",
-    "vitest": "https://github.com/mikearnaldi/vitest/raw/f0fd85f779aaefabfcd5a1309bf558e21c9d09f0/packages/vitest/dev/vitest-0.7.6.tgz",
-    "typescript": "./typescript-4.7.0-tsplus.20220321.2.tgz"
+    "@effect-ts/build-utils@0.38.3": "patch:@effect-ts/build-utils@0.38.3#.yarn/patches/effect-ts-build-utils.patch"
   }
 }
