--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,6 +31,12 @@ jobs:
           yarn test --run --coverage
         env:
           CI: "true"
+      - name: TS Node
+        run: |
+          cd packages/stdlib
+          yarn dev
+        env:
+          CI: "true"
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
