--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -40,6 +40,9 @@
             "@tsplus/stdlib/*": [
                 "./packages/stdlib/src/*"
             ],
+            "@tsplus-tests/stdlib/*": [
+                "./packages/stdlib/test/*"
+            ],
         }
     },
     "exclude": [
