--- a/packages/stdlib/tsconfig.json
+++ b/packages/stdlib/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "noEmit": true
+        "noEmit": true,
+        "tsPlusConfig": "../../tsplus.config.json"
     },
     "include": [
         "src/**/*.ts",
