--- a/package.json
+++ b/package.json
@@ -38,17 +38,16 @@
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.1",
-    "@effect-ts/build-utils": "0.38.3",
-    "@effect-ts/core": "^0.58.1",
-    "@tsplus/installer": "^0.0.47",
-    "@types/node": "^17.0.21",
+    "@effect-ts/build-utils": "0.39.0",
+    "@effect-ts/core": "^0.59.0",
+    "@tsplus/installer": "^0.0.48",
+    "@types/node": "^17.0.22",
     "@types/rimraf": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-replace-import-extension": "^1.1.2",
     "c8": "^7.11.0",
-    "chalk": "5.0.1",
     "concurrently": "^7.0.0",
     "cpx": "^1.5.0",
     "eslint": "^8.11.0",
@@ -60,6 +59,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "madge": "^5.0.1",
+    "picocolors": "^1.0.0",
     "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
@@ -69,7 +69,7 @@
     "vitest": "0.7.7"
   },
   "resolutions": {
-    "eslint-plugin-codegen": "patch:eslint-plugin-codegen@0.16.1#.yarn/patches/eslint-plugin-codegen.patch",
-    "@effect-ts/build-utils@0.38.3": "patch:@effect-ts/build-utils@0.38.3#.yarn/patches/effect-ts-build-utils.patch"
+    "@effect-ts/build-utils": "patch:@effect-ts/build-utils@npm:0.39.0#.yarn/patches/@effect-ts-build-utils-npm-0.39.0-0001b7d917",
+    "eslint-plugin-codegen": "patch:eslint-plugin-codegen@npm:0.16.1#.yarn/patches/eslint-plugin-codegen-npm-0.16.1-87770191cd"
   }
 }
