chore: implement minimal duration module

--- a/packages/stdlib/tsconfig.json
+++ b/packages/stdlib/tsconfig.json
@@ -9,6 +9,9 @@
         "node/**/*.ts",
         "test/**/*.ts"
     ],
+    "files": [
+        "./global.d.ts"
+    ],
     "ts-node": {
         "files": true,
         "require": [
