--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "org:rimraf": "cd $INIT_CWD && rimraf",
     "org:tsc": "cd $INIT_CWD && tsc",
     "org:eslint": "cd $INIT_CWD && eslint",
-    "org:prettier": "cd $INIT_CWD && prettier",
     "org:concurrently": "cd $INIT_CWD && concurrently",
     "org:build-utils": "cd $INIT_CWD && build-utils",
     "org:ts-node": "cd $INIT_CWD && ts-node",
@@ -40,6 +39,7 @@
     "@changesets/cli": "^2.21.1",
     "@effect-ts/build-utils": "0.39.0",
     "@effect-ts/core": "^0.59.0",
+    "@phaphoso/eslint-plugin-dprint": "^0.5.2",
     "@tsplus/installer": "^0.0.51",
     "@types/node": "^17.0.23",
     "@types/rimraf": "^3.0.2",
@@ -50,17 +50,15 @@
     "c8": "^7.11.0",
     "concurrently": "^7.0.0",
     "cpx": "^1.5.0",
+    "dprint": "^0.23.1",
     "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-codegen": "0.16.1",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "madge": "^5.0.1",
     "picocolors": "^1.0.0",
-    "prettier": "^2.6.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
