--- a/packages/stdlib/package.json
+++ b/packages/stdlib/package.json
@@ -15,8 +15,7 @@
     "build-post": "yarn org:build-utils pack",
     "build-pack": "yarn org:concurrently \"yarn build-cjs\" \"yarn build-mjs\" && yarn build-post",
     "lint": "yarn org:eslint . --ext .ts,.tsx",
-    "autofix": "yarn lint --fix && yarn prettier",
-    "prettier": "yarn org:prettier --write \"./{src,test,demo}/**/*.ts\"",
+    "autofix": "yarn lint --fix",
     "tc": "yarn org:tsc --noEmit",
     "circular": "yarn org:madge --circular --no-color --no-spinner build/esm",
     "dev": "yarn org:ts-node node/main.ts"
