chore: single tsconfig setup

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "clean": "ultra -r clean",
     "build": "yarn build-all && yarn build-pack",
     "build-pack": "ultra -r build-pack",
-    "build-all": "tsc -b tsconfig.all.json",
-    "build-watch": "tsc -b tsconfig.all.json --watch",
+    "build-all": "tsc -b tsconfig.json",
+    "build-watch": "tsc -b tsconfig.json --watch",
     "circular": "ultra -r circular",
     "test": "vitest",
     "autofix": "ultra -r autofix",
