--- a/tsplus.config.json
+++ b/tsplus.config.json
@@ -2,7 +2,8 @@
     "importMap": {
         "^(.*)/packages/([^/]*)/src(.*)/index\\.ts$": "@tsplus/$2$3",
         "^(.*)/packages/([^/]*)/src(.*)\\.ts$": "@tsplus/$2$3",
-        "^(.*)/packages/([^/]*)/test/(.*)\\.ts$": "@tsplus-tests/$2/$3"
+        "^(.*)/packages/([^/]*)/test/(.*)\\.ts$": "@tsplus/$2/test/$3",
+        "^(.*)/packages/([^/]*)/examples/(.*)\\.ts$": "@tsplus/$2/examples/$3"
     },
     "traceMap": {
         "^(.*)/packages/([^/]*)/(.*)$": "(@tsplus/$2) $3"
