--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tsplus",
   "private": true,
+  "type": "module",
   "repository": "https://github.com/ts-plus/stdlib.git",
   "author": "Michael Arnaldi <arnaldimichael@gmail.com>",
   "license": "MIT",
@@ -26,7 +27,6 @@
     "org:eslint": "cd $INIT_CWD && eslint",
     "org:concurrently": "cd $INIT_CWD && concurrently",
     "org:build-utils": "cd $INIT_CWD && build-utils",
-    "org:ts-node": "cd $INIT_CWD && node --loader ts-node/esm --no-warnings",
     "org:babel": "cd $INIT_CWD && babel",
     "org:madge": "cd $INIT_CWD && madge"
   },
@@ -60,7 +60,6 @@
     "madge": "^5.0.1",
     "picocolors": "^1.0.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "ultra-runner": "^3.10.5",
     "vite": "^2.8.6",
