--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "changeset": "changeset",
     "release": "changeset publish",
-    "clean": "ultra -r clean",
+    "clean": "ultra -r clean && rimraf tsconfig.tsbuildinfo",
     "build": "yarn build-all && yarn build-pack",
     "build-pack": "ultra -r build-pack",
     "build-all": "tsc -b tsconfig.json",
@@ -35,12 +35,12 @@
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
-    "@changesets/changelog-github": "^0.4.3",
-    "@changesets/cli": "^2.21.1",
+    "@changesets/changelog-github": "^0.4.4",
+    "@changesets/cli": "^2.22.0",
     "@effect-ts/build-utils": "0.39.2",
     "@effect-ts/core": "^0.59.2",
     "@phaphoso/eslint-plugin-dprint": "^0.5.2",
-    "@tsplus/installer": "^0.0.54",
+    "@tsplus/installer": "^0.0.55",
     "@types/node": "^17.0.23",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -50,7 +50,7 @@
     "c8": "^7.11.0",
     "concurrently": "^7.0.0",
     "cpx": "^1.5.0",
-    "dprint": "^0.24.0",
+    "dprint": "^0.24.1",
     "eslint": "^8.12.0",
     "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-codegen": "0.16.1",
@@ -63,7 +63,7 @@
     "typescript": "^4.6.3",
     "ultra-runner": "^3.10.5",
     "vite": "^2.8.6",
-    "vitest": "0.7.11"
+    "vitest": "0.7.12"
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@npm:0.16.1#.yarn/patches/eslint-plugin-codegen-npm-0.16.1-87770191cd",
