--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -52,6 +52,9 @@
             ],
         }
     },
+    "files": [
+        "./prelude.d.ts"
+    ],
     "include": [],
     "exclude": [
         "node_modules",
