chore: improve prelude structure

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -53,7 +53,7 @@
         }
     },
     "files": [
-        "./prelude.d.ts"
+        "./tsplus.prelude.d.ts"
     ],
     "include": [],
     "exclude": [
