--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@npm:0.16.1#.yarn/patches/eslint-plugin-codegen-npm-0.16.1-87770191cd",
-    "@effect-ts/build-utils": "patch:@effect-ts/build-utils@npm:0.39.2#.yarn/patches/@effect-ts-build-utils-npm-0.39.2-f802d4baa8"
+    "@effect-ts/build-utils": "patch:@effect-ts/build-utils@npm:0.39.2#.yarn/patches/@effect-ts-build-utils-npm-0.39.2-f802d4baa8",
+    "dependency-tree": "patch:dependency-tree@npm:8.1.2#.yarn/patches/dependency-tree-npm-8.1.2-dd336d8e28"
   }
 }
