--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "moduleDetection": "force",
         "composite": true,
         "downlevelIteration": true,
         "resolveJsonModule": true,
