chore(@tsplus/stdlib-global): publish standard prelude

--- a/packages/stdlib/package.json
+++ b/packages/stdlib/package.json
@@ -2,7 +2,7 @@
   "name": "@tsplus/stdlib",
   "version": "0.0.36",
   "type": "module",
-  "repository": "https://github.com/ts-plus/installer.git",
+  "repository": "https://github.com/ts-plus/stdlib.git",
   "author": "Michael Arnaldi <arnaldimichael@gmail.com>",
   "license": "MIT",
   "publishConfig": {
