--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,10 +42,12 @@ jobs:
           node build/examples/main.js
         env:
           CI: "true"
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Version PR or Publish to NPM
+        id: changesets
         uses: changesets/action@v1
         with:
+          version: node .github/changeset-version.cjs
           publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
