--- a/packages/stdlib/package.json
+++ b/packages/stdlib/package.json
@@ -13,8 +13,8 @@
     "clean": "yarn org:rimraf build tsbuildinfo dist",
     "build-cjs": "yarn org:babel build/esm --config-file ./.babel.cjs.json --out-dir build/cjs --out-file-extension .js --source-maps",
     "build-mjs": "yarn org:babel build/esm --config-file ./.babel.mjs.json --out-dir build/mjs --out-file-extension .mjs --source-maps",
-    "build-post": "yarn org:build-utils pack",
-    "build-pack": "yarn org:concurrently \"yarn build-cjs\" \"yarn build-mjs\" && yarn build-post",
+    "build-post": "yarn org:build-utils pack-v2",
+    "build-pack": "yarn org:tsc -b tsconfig.json && yarn org:concurrently \"yarn build-cjs\" \"yarn build-mjs\" && yarn build-post",
     "lint": "yarn org:eslint . --ext .ts,.tsx",
     "autofix": "yarn lint --fix",
     "tc": "yarn org:tsc --noEmit"
