chore: kill stdlib-global and simplify setup

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -53,13 +53,13 @@
             ],
         }
     },
-    "files": [
-        "./tsplus.prelude.d.ts"
-    ],
     "include": [],
     "exclude": [
         "node_modules",
         "build",
         "lib"
+    ],
+    "files": [
+        "./packages/stdlib/_src/global.d.ts"
     ]
 }
