--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "clean": "ultra -r clean && rimraf tsconfig.tsbuildinfo",
-    "build": "ultra -r build-pack",
+    "build": "ultra -r -b build-pack",
     "build-all": "tsc -b tsconfig.json",
     "build-watch": "tsc -b tsconfig.json --watch",
     "circular": "yarn org:madge --ts-config ./tsconfig.madge.json --circular --no-color --no-spinner --warning packages/*/build/esm packages/*/build/test packages/*/build/examples",
@@ -39,17 +39,17 @@
     "@effect-ts/build-utils": "0.40.3",
     "@effect-ts/core": "^0.60.2",
     "@repo-tooling/eslint-plugin-dprint": "^0.0.4",
-    "@tsplus/installer": "^0.0.113",
+    "@tsplus/installer": "^0.0.117",
     "@types/node": "^18.0.0",
     "@types/rimraf": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-replace-import-extension": "^1.1.3",
     "c8": "^7.11.3",
     "concurrently": "^7.2.2",
     "cpx": "^1.5.0",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-codegen": "0.16.1",
     "eslint-plugin-import": "^2.26.0",
@@ -58,10 +58,10 @@
     "madge": "^5.0.1",
     "picocolors": "^1.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.3",
+    "typescript": "^4.7.4",
     "ultra-runner": "^3.10.5",
     "vite": "^2.9.12",
-    "vitest": "0.15.1"
+    "vitest": "0.15.2"
   },
   "resolutions": {
     "eslint-plugin-codegen": "patch:eslint-plugin-codegen@npm:0.16.1#.yarn/patches/eslint-plugin-codegen-npm-0.16.1-87770191cd"
