--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tsplus/stdlib",
-  "version": "0.1.8",
+  "name": "@tsplus/runtime",
+  "version": "0.0.0",
   "type": "module",
   "repository": "https://github.com/ts-plus/stdlib.git",
   "author": "Michael Arnaldi <arnaldimichael@gmail.com>",
@@ -32,6 +32,9 @@
     "./*": {
       "import": "./build/esm/*.js"
     }
+  },
+  "dependencies": {
+    "@tsplus/stdlib": "0.x"
   },
   "config": {
     "side": [],
